tests/errors/syntactic_error_1.fm
PASTA_RAIZ "/home/usuario/documentos"
SE $NOME EH "arquivo.txt" ENTAO EXCLUIR // Falta a palavra-chave REGRA
